syntax = "proto3";

import "./Domain.proto";

package Cybtans.Tests;

message UploadImageRequest {
	string name = 1;
	int32 size =2;
	stream image=3;
}

message UploadImageResponse{
	string url = 1;
	string m5Checksum = 2;
}

message UploadStreamByIdRequest{
	string id = 1;
	stream data = 2;
}

message UploadStreamResponse{
	string m5Checksum = 1;
}

message DownloadImageRequest{
	string name = 1;
}

message DowndloadImageResponse{
	string fileName = 1;
	string contentType = 2;
	stream image = 3;
}


service OrderService {
	
	rpc Foo(void) returns (void){	
		option template = "foo"; 
		option method = "GET";		
	};

	rpc Baar(void) returns (void){	
		option template = "baar"; 
		option method = "GET";		
	};

	rpc Test(void) returns (void){
		option template = "test"; 
		option method = "GET";		
	};

	rpc Argument(void) returns (void){
		option template = "arg"; 
		option method = "GET";		
	};

	rpc UploadImage(UploadImageRequest) returns(UploadImageResponse) {
		option template = "upload";
		option method = "POST";
	};

	rpc UploadStreamById(UploadStreamByIdRequest) returns (UploadStreamResponse) {
		option template = "{id}/upload";
		option method = "POST";
	};

	rpc UploadStream(stream) returns (UploadStreamResponse) {
		option template = "stream";
		option method = "POST";
	};

	rpc DownloadImage(DownloadImageRequest) returns (DowndloadImageResponse) {
		option template ="download";
		option method = "GET";		
	};
}
